--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>My name is Andrea, welcomde to my site!</h1>
+<h1>My name is Andrea, welcomde to my site!</h1> {text align: center} 
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
