--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<center h1> My name is Andrea, welcomde to my site!</h1> 
+<center h1> My name is Andrea, welcome to my site!</h1> 
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
