--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1><center> My name is Andrea, welcome to my site!</h1> 
  <image> 
-<br><h1> About me</h1>
+<linebr><h1> About me</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
