--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1><center> My name is Andrea, welcome to my site!</h1> 
+ <h1 style="text-align:center;">My name is Andrea</h1>
  <image> 
 <linebr><h1> About me</h1>
 <p>I'm hosted with GitHub Pages.</p>
