--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
  <h1 style="text-align:center;">My name is Andrea</h1>
- <image> 
+ <h2 style="text align:center;">Welcome to my site!</h2>
 <linebr><h1> About me</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
