--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <body>
  <h1 style="text-align:center;">My name is Andrea</h1>
  <h2 style="text align:center;">Welcome to my site!</h2>
- <center><br/><br/>
-<linebr><h1> About me</h1>
+<br/><br/><p><strong>About Me</strong></p>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
