--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body bgcolor = "LightPink">
  <h1 style="text-align:center;">My name is Andrea</h1>
- <h2 style="text align:center;">Welcome to my site!</h2>
+ <h2 style="text-align:center;">Welcome to my site!</h2>
 <br/><br/><p><strong>About Me</strong></p>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
