--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
  <h2 style="text-align:center;">Welcome to my site!</h2>
 <br/><br/><p><strong>About Me</strong></p>
 <p>I like the beach, hiking, traveling, and am obsessed with grizzly bears. I'm thinking of majoring in marketing and minoring in MIS here at UT. When I graduate I want to go to graduate school in Seattle and then visit every continent in the world (minus Antarctica bc ew) and explore the culture in their countries.  </p>
-</body>
+<pstyle="text-align:center;">a href='https://twitter.com/?logout=1551320493071https://twitter.com/login?lang=en">Click Here</a>togo to my favorite site</p>
 </html>
