--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body bgcolor = "LightPink">
  <h1 style="text-align:center;">My name is Andrea</h1>
  <h2 style="text-align:center;">Welcome to my site!</h2>
-<center><imgsrc="https://drive.google.com/drive/u/0/folders/1ThN0XDbhQ_llMgxSv0kZ2Nc-doWReoC6"/></center><hr/>
+<center><imgsrc=C:\Users\Cornelia\Downloads\MIS""/></center><hr/>
  <p><strong>About Me</strong></p>
 <p>I like reading, hiking, traveling, and am obsessed with grizzly bears. I'm thinking of majoring in marketing and minoring in MIS here at UT. When I graduate I want to go to graduate school in Seattle and then visit every continent in the world (minus Antarctica bc ew) and explore the culture in their countries.  </p>
 <pstyle="text-align:center;">a href='https://twitter.com/?logout=1551320493071https://twitter.com/login?lang=en">Click Here</a>togo to my favorite site</p>
