--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body bgcolor = "LightPink">
  <h1 style="text-align:center;">My name is Andrea</h1>
  <h2 style="text-align:center;">Welcome to my site!</h2>
- <center><imgsrc=C:\Users\Cornelia\Downloads\MIS""/></center><hr/>
+ <center><imgsrc="https://scontent.fftw1-1.fna.fbcdn.net/v/t1.0-9/47680515_1901335559984568_2080633319556382720_n.jpg?_nc_cat=110&_nc_ht=scontent.fftw1-1.fna&oh=8677d94c81f2ec9a88c51b86dfc90a5d&oe=5D348ECA"/></center><hr/>
  <p><strong>About Me</strong></p>
 <p>I like reading, hiking, traveling, and am obsessed with grizzly bears. I'm thinking of majoring in marketing and minoring in MIS here at UT. When I graduate I want to go to graduate school in Seattle and then visit every continent in the world (minus Antarctica bc ew) and explore the culture in their countries.  </p>
 <pstyle="text-align:center;">a href='https://twitter.com/?logout=1551320493071https://twitter.com/login?lang=en">Click Here</a>togo to my favorite site</p>
