--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body bgcolor = "LightPink">
  <h1 style="text-align:center;">My name is Andrea</h1>
  <h2 style="text-align:center;">Welcome to my site!</h2>
- <center><imgsrc="https://scontent.fftw1-1.fna.fbcdn.net/v/t1.0-9/47680515_1901335559984568_2080633319556382720_n.jpg?_nc_cat=110&_nc_ht=scontent.fftw1-1.fna&oh=8677d94c81f2ec9a88c51b86dfc90a5d&oe=5D348ECA"/></center><hr/>
+ <center><img src="https://i.kym-cdn.com/entries/icons/facebook/000/023/098/Screen_Shot_2017-05-30_at_2.23.51_PM.jpg" width="265" height="266" align="BOTTOM" /></center><hr />
  <p><strong>About Me</strong></p>
 <p>I like reading, hiking, traveling, and am obsessed with grizzly bears. I'm thinking of majoring in marketing and minoring in MIS here at UT. When I graduate I want to go to graduate school in Seattle and then visit every continent in the world (minus Antarctica bc ew) and explore the culture in their countries.  </p>
 <p style="text-align: center;"><a href="https://www.kodak.com/corp/default.htm">Click Here</a> to go to my favorite site</p></html>
